fluent-syntax/test/fixtures_behavior/variant_starts_from_nl.ftl
key = {
*[one] Value
    }
//~ ERROR E0004, pos 7, args "a-zA-Z_"
